<resources>
    <string name="app_name">Clothes Factory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="silk">Шелк</string>
    <string name="cotton">Хлопок</string>
    <string name="wool">Шерсть</string>
    <string name="dress_desc">Платье</string>
    <string name="trousers_desc">Брюки</string>
    <string name="shirt_desc">Рубашка</string>
    <string name="title">Выберите любую одежду</string>
    <string name="order">Оформить заказ</string>

    <string name="buy">+</string>
    <string name="delete">-</string>
</resources>