<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="12dp"
    tools:context=".OrderFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="4dp"
                android:padding="5dp"
                android:background="#808080">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:src="@drawable/shirt"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/shirt_desc"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="32dp">

                    <EditText
                        android:id="@+id/shirt_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="4dp"
                android:padding="5dp"
                android:background="#808080">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:src="@drawable/trousers"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/trousers_desc"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:backgroundTint="@color/white"
                        app:cardCornerRadius="32dp">

                        <EditText
                            android:id="@+id/trousers_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="4dp"
                android:padding="5dp"
                android:background="#808080">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:src="@drawable/dress"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/dress_desc" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:backgroundTint="@color/white"
                        app:cardCornerRadius="32dp">

                        <EditText
                            android:id="@+id/dress_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/material_cloth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom|center"
            android:checkedButton="@id/cotton">

            <RadioButton
                android:id="@+id/cotton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:text="@string/cotton"
                android:button="@drawable/custom_icon_cotton"
                android:layoutDirection="rtl" />

            <RadioButton
                android:id="@+id/silk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:text="@string/silk"
                android:button="@drawable/custom_icon_silk"
                android:layoutDirection="rtl" />

            <RadioButton
                android:id="@+id/wool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:text="@string/wool"
                android:button="@drawable/custom_icon_wool"
                android:layoutDirection="rtl" />

        </RadioGroup>

        <Button
            android:id="@+id/btnOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/order"/>

        <TextView
            android:id="@+id/tvShirt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="16dp"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/tvTrousers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="16dp"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/tvDress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="16dp"
            android:textSize="12sp"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>